...
            "value" : "Settings"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Настройки"
          }
        }
      }
    },
    "accessibility.share.button" : {
      "extractionState" : "manual",
...
            "value" : "Speech to Text"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Речь в Текст"
          }
        }
      }
    },
    "button.ok" : {
      "extractionState" : "manual",
...
            "value" : "Notes"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Записи"
          }
        }
      }
    },
    "recording.status.idle" : {
      "extractionState" : "manual",
...
            "value" : "Notes"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Заметки"
          }
        }
      }
    },
    "tab.recording" : {
      "extractionState" : "manual",
...
